--- a/EduPortal.API/EduPortal.Bl/EduPortal.Bl.csproj
+++ b/EduPortal.API/EduPortal.Bl/EduPortal.Bl.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="EPPlus" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.11" />
+    <PackageReference Include="NPOI" Version="2.7.4" />
   </ItemGroup>
 
   <ItemGroup>
