--- a/EduPortal-client/package.json
+++ b/EduPortal-client/package.json
@@ -11,15 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "@angular/ssr": "^19.2.13",
+    "@angular/animations": "19.2.13",
+    "@angular/common": "19.2.13",
+    "@angular/compiler": "19.2.13",
+    "@angular/core": "19.2.13",
+    "@angular/forms": "19.2.13",
+    "@angular/platform-browser": "19.2.13",
+    "@angular/platform-browser-dynamic": "19.2.13",
+    "@angular/platform-server": "19.2.13",
+    "@angular/router": "19.2.13",
+    "@angular/ssr": "^19.2.19",
     "express": "^4.18.2",
     "ngx-spinner": "^19.0.0",
     "rxjs": "~7.8.0",
@@ -28,9 +29,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.13",
+    "@angular-devkit/build-angular": "^19.2.19",
     "@angular/cli": "^19.2.13",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/compiler-cli": "19.2.13",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
