--- a/EduPortal-client/package.json
+++ b/EduPortal-client/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
